--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+- degree: Blockchain Developer Nanodegree  
+  uni: Google
+  year: June, 2022; November, 2022
+  awards: 1x Kaggle Expert
+  summary: Technophile
